Characteristic's refactoring and graph description characteristic implementation